--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>inscricao</title>
   <link rel="stylesheet" href="css/style.css">
-  <script type="text/javascript" src="js/index.js"></script>
+  <script src="js/index.js" defer></script>
 </head>
 
 
