--- a/fim.html
+++ b/fim.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>fim</title>
+  <link rel = "shortcut icon" type = "imagem/x-icon" href = "img/logo.png"/>
   <link rel="stylesheet" href="css/style-fim.css">
 </head>
 <body>
