--- a/inscricao/index.html
+++ b/inscricao/index.html
@@ -146,7 +146,7 @@
         </form>
 
     </div>
-    <p style="position: fixed;margin-top: 95%; font-size: 25pt; opacity: 0.3; color: #ccc;"><b>©THIAGO weverson 2023</b></p>
+    <p style="position: fixed; font-size: 15pt; opacity: 0.3; color: #ccc;"><b>©THIAGO weverson 2023</b></p>
     
     <script type="text/javascript">
     enviando = (elemento)=>{
